--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Sourabh Dattawad">
     <meta name="description" content="Sourabh Dattawad's website">
+    <meta name="theme-color" content="#FFE600">
     <title>Sourabh Dattawad</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
